--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     font-size: 10vh;
+    color: white;
+    
 }
 
 .container {
@@ -9,6 +11,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    border-radius: 2vh;
+    background-image: linear-gradient(rgb(10, 0, 53),black,rgb(10, 0, 53));
 }
 
 
@@ -20,8 +24,10 @@
 }
 
 .toprow{
+    top: 0;
     display: flex;
     justify-content: space-between;
+    border-radius: 2vh;
 }
 
 .cards{
@@ -54,10 +60,14 @@ img{
 
 button{
     position: relative;
+    top: 1vh;
     left: 6vh;
-    height: 20vh;
-    width: 20vh;
-    border-radius: 50%;
+    height: 10vh;
+    width: 15vh;
+    border-radius: 2vh;
+    font-weight: bold;
+    background-color: rgb(10, 0, 53);
+    color: white;
 }
 
 body {
